[gd_scene load_steps=11 format=2]

[ext_resource path="res://Assets/UI/BtnMateri1.png" type="Texture" id=1]
[ext_resource path="res://Assets/UI/CloseBtn.png" type="Texture" id=2]
[ext_resource path="res://Assets/UI/BtnMateri5.png" type="Texture" id=3]
[ext_resource path="res://Assets/UI/BtnMateri6.png" type="Texture" id=4]
[ext_resource path="res://Assets/UI/MateriBG.png" type="Texture" id=5]
[ext_resource path="res://Assets/UI/BtnMateri2.png" type="Texture" id=6]
[ext_resource path="res://Assets/UI/BtnMateri4.png" type="Texture" id=7]
[ext_resource path="res://Assets/UI/BtnMateri3.png" type="Texture" id=8]
[ext_resource path="res://Materi.gd" type="Script" id=9]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0, 0, 0, 0.729412 )

[node name="Materi" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( -1064, -175 )
script = ExtResource( 9 )

[node name="DarkOverlay" type="Panel" parent="."]
margin_right = 1920.0
margin_bottom = 1080.0
custom_styles/panel = SubResource( 1 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_left = 129.0
margin_top = 131.0
margin_right = 3854.0
margin_bottom = 1967.0
rect_scale = Vector2( 0.45, 0.45 )
texture = ExtResource( 5 )

[node name="ScrollContainer" type="ScrollContainer" parent="TextureRect"]
margin_left = 184.0
margin_top = 151.0
margin_right = 3558.0
margin_bottom = 1693.0
grow_vertical = 0
size_flags_horizontal = 3
size_flags_vertical = 3
follow_focus = true
scroll_horizontal_enabled = false

[node name="VBoxContainer" type="VBoxContainer" parent="TextureRect/ScrollContainer"]
margin_right = 3362.0
margin_bottom = 2600.0
rect_min_size = Vector2( 0, 2600 )
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="MateriBtn1" type="Button" parent="TextureRect/ScrollContainer/VBoxContainer"]
margin_right = 3362.0
margin_bottom = 430.0
size_flags_horizontal = 3
size_flags_vertical = 3
flat = true
expand_icon = true

[node name="TextureRect" type="TextureRect" parent="TextureRect/ScrollContainer/VBoxContainer/MateriBtn1"]
margin_left = -46.2222
margin_top = -37.6667
margin_right = 3328.78
margin_bottom = 462.333
texture = ExtResource( 1 )
expand = true
__meta__ = {
"_edit_use_anchors_": true
}

[node name="MateriBtn2" type="Button" parent="TextureRect/ScrollContainer/VBoxContainer"]
margin_top = 434.0
margin_right = 3362.0
margin_bottom = 864.0
size_flags_horizontal = 3
size_flags_vertical = 3
flat = true
expand_icon = true

[node name="TextureRect" type="TextureRect" parent="TextureRect/ScrollContainer/VBoxContainer/MateriBtn2"]
margin_left = -46.2222
margin_top = -37.6667
margin_right = 3328.78
margin_bottom = 462.333
texture = ExtResource( 6 )
expand = true
__meta__ = {
"_edit_use_anchors_": true
}

[node name="MateriBtn3" type="Button" parent="TextureRect/ScrollContainer/VBoxContainer"]
margin_top = 868.0
margin_right = 3362.0
margin_bottom = 1298.0
size_flags_horizontal = 3
size_flags_vertical = 3
flat = true
expand_icon = true

[node name="TextureRect" type="TextureRect" parent="TextureRect/ScrollContainer/VBoxContainer/MateriBtn3"]
margin_left = -46.2222
margin_top = -37.6666
margin_right = 3328.78
margin_bottom = 462.333
texture = ExtResource( 8 )
expand = true
__meta__ = {
"_edit_use_anchors_": true
}

[node name="MateriBtn4" type="Button" parent="TextureRect/ScrollContainer/VBoxContainer"]
margin_top = 1302.0
margin_right = 3362.0
margin_bottom = 1732.0
size_flags_horizontal = 3
size_flags_vertical = 3
flat = true
expand_icon = true

[node name="TextureRect" type="TextureRect" parent="TextureRect/ScrollContainer/VBoxContainer/MateriBtn4"]
margin_left = -46.2222
margin_top = -37.6666
margin_right = 3328.78
margin_bottom = 462.333
texture = ExtResource( 7 )
expand = true
__meta__ = {
"_edit_use_anchors_": true
}

[node name="MateriBtn5" type="Button" parent="TextureRect/ScrollContainer/VBoxContainer"]
margin_top = 1736.0
margin_right = 3362.0
margin_bottom = 2166.0
size_flags_horizontal = 3
size_flags_vertical = 3
flat = true
expand_icon = true

[node name="TextureRect" type="TextureRect" parent="TextureRect/ScrollContainer/VBoxContainer/MateriBtn5"]
margin_left = -46.2222
margin_top = -37.6666
margin_right = 3328.78
margin_bottom = 462.333
texture = ExtResource( 3 )
expand = true
__meta__ = {
"_edit_use_anchors_": true
}

[node name="MateriBtn6" type="Button" parent="TextureRect/ScrollContainer/VBoxContainer"]
margin_top = 2170.0
margin_right = 3362.0
margin_bottom = 2600.0
size_flags_horizontal = 3
size_flags_vertical = 3
flat = true
expand_icon = true

[node name="TextureRect" type="TextureRect" parent="TextureRect/ScrollContainer/VBoxContainer/MateriBtn6"]
margin_left = -46.2222
margin_top = -37.6665
margin_right = 3328.78
margin_bottom = 462.333
texture = ExtResource( 4 )
expand = true
__meta__ = {
"_edit_use_anchors_": true
}

[node name="CloseButton" type="Button" parent="."]
margin_left = 81.0
margin_top = 105.0
margin_right = 221.0
margin_bottom = 230.0
flat = true
expand_icon = true

[node name="TextureRect" type="TextureRect" parent="CloseButton"]
margin_right = 140.0
margin_bottom = 125.0
texture = ExtResource( 2 )
expand = true
